lang/src/ast/snapshots/rain_lang__ast__test__not_paren_operation.snap
---
source: lang/src/ast/test.rs
expression: "parse_display_expr(\"!(!a || !b)\")"
---
Not(
 BinaryOp(
  Not(
   Ident(
    a
   )
  )
  ||
  Not(
   Ident(
    b
   )
  )
 )
)
