lang/src/ast/snapshots/rain_lang__ast__test__number_add.snap
---
source: lang/src/ast/test.rs
expression: "parse_display_expr(\"1 + 1\")"
---
BinaryOp(
 IntegerLiteral(
  1
 )
 +
 IntegerLiteral(
  1
 )
)
