lang/src/ast/snapshots/rain_lang__ast__test__number_add_subtrace_multiply_divide_precedence.snap
---
source: lang/src/ast/test.rs
expression: "parse_display_expr(\"1 - 3 / 2 + 4 * 3\")"
---
BinaryOp(
 BinaryOp(
  IntegerLiteral(
   1
  )
  -
  BinaryOp(
   IntegerLiteral(
    3
   )
   /
   IntegerLiteral(
    2
   )
  )
 )
 +
 BinaryOp(
  IntegerLiteral(
   4
  )
  *
  IntegerLiteral(
   3
  )
 )
)
