lang/src/ast/snapshots/rain_lang__ast__test__number_add_subtract_precedence.snap
---
source: lang/src/ast/test.rs
expression: "parse_display_expr(\"5 - 2 + 3 - 4\")"
---
BinaryOp(
 BinaryOp(
  BinaryOp(
   IntegerLiteral(
    5
   )
   -
   IntegerLiteral(
    2
   )
  )
  +
  IntegerLiteral(
   3
  )
 )
 -
 IntegerLiteral(
  4
 )
)
