lang/src/ast/snapshots/rain_lang__ast__test__number_multiply_left_associative.snap
---
source: lang/src/ast/test.rs
expression: "parse_display_expr(\"1 * 2 * 3\")"
---
BinaryOp(
 BinaryOp(
  IntegerLiteral(
   1
  )
  *
  IntegerLiteral(
   2
  )
 )
 *
 IntegerLiteral(
  3
 )
)
