lang/src/ast/snapshots/rain_lang__ast__test__or_not_dot_operation.snap
---
source: lang/src/ast/test.rs
expression: "parse_display_expr(\"a || !b.c\")"
---
BinaryOp(
 Ident(
  a
 )
 ||
 Not(
  Namespace(
   Ident(
    b
   )
   .
   c
  )
 )
)
