lang/src/ast/snapshots/rain_lang__ast__test__plus_not_dot_plus_expr.snap
---
source: lang/src/ast/test.rs
expression: "parse_display_expr(\"f + !a.b + d\")"
---
BinaryOp(
 BinaryOp(
  Ident(
   f
  )
  +
  Not(
   BinaryOp(
    Ident(
     a
    )
    .
    Ident(
     b
    )
   )
  )
 )
 +
 Ident(
  d
 )
)
